# deloitteIH-comp

./: .env.example  .gitignore  README.md  change_timing.py  fill_with_zero.py  merge_data.py  pyproject.toml  requirements.txt  run.bat  run.sh  sorted_most_ordered.csv  split_merged_complete.py
config/: settings.py
docs/: DATA_INVESTIGATION_AND_PLAN.md  ML_PIPELINE.md  merged_columns.txt
models/: feature_cols.json  lightgbm.txt  linear_regression.pkl  metrics.json  scaler.pkl
scripts/: build_cache.py  inspect_columns.py  train_demand_models.py
src/: app_streamlit.py  main.py
src/api/: routes.py
src/models/: data_loader.py  demand_models.py  feature_engineering.py
src/services/: chatbot_service.py  inventory_service.py
src/utils/: helpers.py
tests/: conftest.py  test_api_endpoints.py  test_cache_builder.py  test_chatbot.py  test_helpers.py  test_inventory_service.py
