[project]
name = "fresh-flow-insights"
version = "0.1.0"
description = "Demand forecasting & prep suggestions for Fresh Flow Markets (Deloitte x AUC Hackathon)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
streamlit = ["streamlit>=1.25.0"]

